--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="Thuê xe 4, 7 chỗ tự lái tại Vĩnh Long, Cần Thơ | xetulai.xyz" />
         <meta name="author" content="giangcse" />
-        <title>Thuê xe tự lái - xetulai.xyz</title>
+        <title>Thuê xe tự lái khu vực Vĩnh Long, Cần Thơ - xetulai.xyz</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
@@ -48,10 +48,8 @@
                         <!-- Mashead text and app badges-->
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
                             <h1 class="display-1 lh-1 mb-2">thuê xe<br/>tự lái.</h1>
-                            <p class="lead fw-normal text-muted mb-5">Dịch vụ cho thuê xe 4 chỗ, 7 chỗ tự lái.</p>
+                            <p class="lead fw-normal text-muted mb-5">Dịch vụ cho thuê xe 4 chỗ, 7 chỗ tự lái khu vực Vĩnh Long, Cần Thơ.</p>
                             <div class="d-flex flex-column flex-lg-row align-items-center">
-                                <!-- <a class="me-lg-3 mb-4 mb-lg-0" href="#!"><img class="app-badge" src="assets/img/google-play-badge.svg" alt="..." /></a>
-                                <a href="#!"><img class="app-badge" src="assets/img/app-store-badge.svg" alt="..." /></a> -->
                             </div>
                         </div>
                     </div>
@@ -72,13 +70,6 @@
                             ><svg class="shape-2 d-none d-sm-block" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><circle cx="50" cy="50" r="50"></circle></svg>
                             <div class="device-wrapper">
                                 <div class="device" data-device="iPhoneX" data-orientation="portrait" data-color="black">
-                                    <!-- <div class="screen bg-black"> -->
-                                        <!-- PUT CONTENTS HERE:-->
-                                        <!-- * * This can be a video, image, or just about anything else.-->
-                                        <!-- * * Set the max width of your media to 100% and the height to-->
-                                        <!-- * * 100% like the demo example below.-->
-                                        <!-- <video muted="muted" autoplay="" loop="" style="max-width: 100%; height: 100%"><source src="assets/img/demo-screen.mp4" type="video/mp4" /></video> -->
-                                    <!-- </div> -->
                                 </div>
                             </div>
                         </div>
@@ -91,7 +82,7 @@
             <div class="container px-5">
                 <div class="row gx-5 justify-content-center">
                     <div class="col-xl-8">
-                        <div class="h2 fs-1 text-white mb-4">"Thoải mái vi vu với nhiều loại xe và chi phí vô cùng hợp lí."</div>
+                        <div class="h2 fs-1 text-white mb-4">"Thuê xe tự lái tính theo ngày với nhiều mẫu mã, giá cả phù hợp với túi tiền."</div>
                         <img src="assets/img/tnw-logo.svg" alt="..." style="height: 3rem" />
                     </div>
                 </div>
@@ -152,12 +143,12 @@
         </section>
         <section class="bg-gradient-primary-to-secondary" id="download">
             <div class="container px-5">
-                <h2 class="text-center text-white font-alt mb-4">Liên hệ đặt xe ngay hôm nay!</h2>
+                <h2 class="text-center text-white font-alt mb-4">Liên hệ để biết thêm chi tiết!</h2>
                 <div class="d-flex flex-column flex-lg-row align-items-center justify-content-center">
                     <a class="btn btn-light rounded-pill me-lg-3 mb-4 mb-lg-0" href="https://zalo.me/84914747190">
                         <span class="d-flex align-items-center">
                             <i class="bi-chat-text-fill me-2"></i>
-                            <span class="small">Liên hệ</span>
+                            <span class="small">Liên hệ ngay</span>
                         </span>
                     </a>
                 </div>
