--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="Thuê xe 4, 7 chỗ tự lái tại Vĩnh Long, Cần Thơ | xetulai.xyz" />
+        <meta name="description" content="Thuê xe 4, 7 chỗ tự lái tại Vĩnh Long - Cần Thơ, cho thuê xe kèm tài. | xetulai.xyz" />
         <meta name="author" content="giangcse" />
         <title>Thuê xe tự lái khu vực Vĩnh Long, Cần Thơ - xetulai.xyz</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
@@ -48,7 +48,7 @@
                         <!-- Mashead text and app badges-->
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
                             <h1 class="display-1 lh-1 mb-2">thuê xe<br/>tự lái.</h1>
-                            <p class="lead fw-normal text-muted mb-5">Dịch vụ cho thuê xe 4 chỗ, 7 chỗ tự lái khu vực Vĩnh Long, Cần Thơ.</p>
+                            <p class="lead fw-normal text-muted mb-5">Dịch vụ cho thuê xe 4 chỗ, 7 chỗ tự lái khu vực Vĩnh Long, Cần Thơ.<br/>Cho thuê xe kèm tài, đưa đón tận nơi.</p>
                             <div class="d-flex flex-column flex-lg-row align-items-center">
                             </div>
                         </div>
@@ -101,6 +101,12 @@
                                         <img class="icon-feature text-gradient d-block mb-3" src="assets/img/icon-toyota-vios.png" width="300" alt="Xe 4 số sàn" />
                                         <h3 class="font-alt">4 chỗ số sàn</h3>
                                         <p class="text-muted mb-0">Các dòng xe: Toyota Vios, Huyndai Accent, Kia Soluto<br/>Giá: 500.000VND/ngày</p>
+                                        <a class="btn btn-danger rounded-pill px-3 mb-2 mb-lg-0" href="https://zalo.me/84914747190">
+                                            <span class="d-flex align-items-center">
+                                                <i class="bi-chat-text-fill me-2"></i>
+                                                <span class="small">Đặt xe</span>
+                                            </span>
+                                        </a>
                                     </div>
                                 </div>
                                 <div class="col-md-6 mb-5">
@@ -109,6 +115,12 @@
                                         <img class="icon-feature text-gradient d-block mb-3" src="assets/img/icon-hyundai-accent.png" width="300" alt="Xe 4 chỗ số tự động" />
                                         <h3 class="font-alt">4 chỗ số tự động</h3>
                                         <p class="text-muted mb-0">Các dòng xe: Toyota Vios, Huyndai Accent, Kia Soluto<br/>Giá: 600.000VND/ngày</p>
+                                        <a class="btn btn-danger rounded-pill px-3 mb-2 mb-lg-0" href="https://zalo.me/84914747190">
+                                            <span class="d-flex align-items-center">
+                                                <i class="bi-chat-text-fill me-2"></i>
+                                                <span class="small">Đặt xe</span>
+                                            </span>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -119,6 +131,12 @@
                                         <img class="icon-feature text-gradient d-block mb-3" src="assets/img/icon-mitsubishi-xpander.png" width="300" alt="Xe 7 chỗ số sàn" />
                                         <h3 class="font-alt">Xe 7 chỗ số sàn</h3>
                                         <p class="text-muted mb-0">Các dòng xe: Mitsubishi Xpander, Toyota Veloz, Toyota Innova, Toyota Fortuner<br/>Giá: 700.000VND/ngày</p>
+                                        <a class="btn btn-danger rounded-pill px-3 mb-2 mb-lg-0" href="https://zalo.me/84914747190">
+                                            <span class="d-flex align-items-center">
+                                                <i class="bi-chat-text-fill me-2"></i>
+                                                <span class="small">Đặt xe</span>
+                                            </span>
+                                        </a>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
@@ -127,6 +145,12 @@
                                         <img class="icon-feature text-gradient d-block mb-3" src="assets/img/icon-toyota-fortuner.png" width="300" alt="Xe 7 chỗ số tự động" />
                                         <h3 class="font-alt">Xe 7 chỗ số tự động</h3>
                                         <p class="text-muted mb-0">Các dòng xe: Mitsubishi Xpander, Toyota Veloz, Toyota Innova, Toyota Fortuner, Kia Carnival<br/>Giá: 800.000VND/ngày</p>
+                                        <a class="btn btn-danger rounded-pill px-3 mb-2 mb-lg-0" href="https://zalo.me/84914747190">
+                                            <span class="d-flex align-items-center">
+                                                <i class="bi-chat-text-fill me-2"></i>
+                                                <span class="small">Đặt xe</span>
+                                            </span>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -157,6 +181,7 @@
         <footer class="bg-black text-center py-5">
             <div class="container px-5">
                 <div class="text-white-50 small">
+                    <p>Cho thuê xe tự lái khu vực Vĩnh Long - Cần Thơ</p>
                     <div class="mb-2">&copy; xetulai.xyz 2025. All Rights Reserved.</div>
                 </div>
             </div>
