--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
                             <div class="d-grid"><button class="btn btn-primary rounded-pill btn-lg disabled" id="submitButton" type="submit">Submit</button></div>
                         </form>
                     </div>
+                    <script src="https://messenger.svc.chative.io/static/v1.0/channels/s2de1597e-0d36-4ad4-998a-1102f7105514/messenger.js?mode=livechat" defer="defer"></script>
                 </div>
             </div>
         </div>
