Add zalo chat widget

--- a/index.html
+++ b/index.html
@@ -234,10 +234,12 @@
                             <div class="d-grid"><button class="btn btn-primary rounded-pill btn-lg disabled" id="submitButton" type="submit">Submit</button></div>
                         </form>
                     </div>
-                    <script src="https://messenger.svc.chative.io/static/v1.0/channels/s2de1597e-0d36-4ad4-998a-1102f7105514/messenger.js?mode=livechat" defer="defer"></script>
                 </div>
             </div>
         </div>
+        <!-- Zalo Chat widget -->
+        <div class="zalo-chat-widget" data-oaid="1389488618967454261" data-welcome-message="Rất vui khi được hỗ trợ bạn!" data-autopopup="0" data-width="" data-height=""></div>
+        <script src="https://sp.zalo.me/plugins/sdk.js"></script>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
