Add telegram mini app

--- a/index.html
+++ b/index.html
@@ -237,6 +237,8 @@
                 </div>
             </div>
         </div>
+        <!-- Telegram Mini App -->
+        <script src="https://telegram.org/js/telegram-web-app.js"></script>
         <!-- Zalo Chat widget -->
         <div class="zalo-chat-widget" data-oaid="1389488618967454261" data-welcome-message="Rất vui khi được hỗ trợ bạn!" data-autopopup="0" data-width="" data-height=""></div>
         <script src="https://sp.zalo.me/plugins/sdk.js"></script>
